# CodeClashEVM

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  EVMArenaReport.md  README.md  batch_monitor.py  batch_submit.py  freeze_viewer.py  main.py  main_single_player.py  mkdocs.yml  pyproject.toml  viewer.py
.cursor/rules/: batch_monitor.mdc  style.mdc  viewer.mdc
.github/: mlc_config.json
.github/workflows/: deploy-docs.yml  pytest.yaml
codeclash/: __init__.py  constants.py
codeclash/agents/: __init__.py  abstract.py  dummy.py  minisweagent.py  player.py  utils.py
codeclash/analysis/: bootstrap.ipynb  bootstrap.py  matrix.py
codeclash/arenas/: __init__.py  arena.py
codeclash/games/: __init__.py  abstract.py  (+2 more)
codegames/: constants.py
configs/: battlecode.yaml  battlesnake.yaml  battlesnake_dummy.yaml  battlesnake_single_player.yaml  corewar.yaml  dummy.yaml  generate_confs.py  litellm_custom_model_config.yaml  model_configs.yaml  models.yaml  models_multi.yaml  robocode.yaml  robotrumble.yaml  tracker.json
docker/: BattleCode.Dockerfile  BattleSnake.Dockerfile  CoreWar.Dockerfile  DummyGame.Dockerfile  Halite-II.Dockerfile  Halite-III.Dockerfile  Halite.Dockerfile  HuskyBench.Dockerfile  RoboCode.Dockerfile  RobotRumble.Dockerfile
docs/: README.md  _footer.md  index.md  quickstart.md
scripts/: include_cost_info_in_metadata.py  multiple.sh  push_log_to_gh.py  run_all_viz.py  zip_results_copy_metadata.py
templates/: index.html  no_logs.html  trajectory.html
tests/: test_integration.py
viewer_react/: backend.py
(+449 files in other folders)
