[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "codeclash"
dynamic = ["version"]
authors = [
    {name = "John Yang", email = "byjohnyang@gmail.com"},
]
description = "CodeClash"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "litellm",
    "mini-swe-agent",
    "python-dotenv",
    "ghapi",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
include = ["codeclash*"]
